updated ml_baseline notebook

--- a/code/ml_baseline.ipynb
+++ b/code/ml_baseline.ipynb
@@ -16,18 +16,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Spark application\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>1</td><td>application_1490841303863_0005</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hn0-cse625.2111020eht4ehjujlvoh0esvde.bx.internal.cloudapp.net:8088/proxy/application_1490841303863_0005/\">Link</a></td><td><a target=\"_blank\" href=\"http://10.0.0.5:30060/node/containerlogs/container_1490841303863_0005_01_000001/livy\">Link</a></td><td>✔</td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparkSession available as 'spark'.\n"
+     ]
+    }
+   ],
    "source": [
     "from pyspark import SparkContext, SparkConf\n",
     "from pyspark.sql.types import *\n",
     "\n",
     "conf = SparkConf().setAppName(\"preprocess\").setMaster(\"local\")\n",
     "sc = SparkContext.getOrCreate(conf)\n",
-    "spark = SparkSession.builder.master(\"local\").appName(\"preprocess\").getOrCreate()"
+    "#spark = SparkSession.builder.master(\"local\").appName(\"preprocess\").getOrCreate()"
    ]
   },
   {
@@ -39,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -68,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -77,8 +105,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train: 30430\n",
-      "Test: 10132\n",
+      "Train: 30400\n",
+      "Test: 10162\n",
       "+------+----+----+-----+----+-----+-----+-----+-----+----+----+--------------------+\n",
       "|    id|4019|2724|25000|4280|41401|53081|51881|42731|5849|5990|            features|\n",
       "+------+----+----+-----+----+-----+-----+-----+-----+----+----+--------------------+\n",
@@ -86,22 +114,22 @@
       "|100053|   0|   0|    1|   0|    0|    0|    0|    1|   0|   0|(40000,[794,2044,...|\n",
       "|100059|   1|   0|    1|   0|    1|    0|    0|    0|   0|   0|(40000,[130,207,3...|\n",
       "|100061|   0|   0|    0|   1|    0|    0|    0|    0|   1|   0|(40000,[24,151,20...|\n",
-      "|100065|   1|   0|    0|   0|    0|    0|    0|    0|   1|   0|(40000,[115,794,8...|\n",
-      "|100066|   1|   0|    0|   0|    1|    1|    0|    0|   0|   0|(40000,[130,184,1...|\n",
-      "|100074|   0|   0|    0|   0|    0|    0|    1|    0|   0|   0|(40000,[32,62,71,...|\n",
-      "|100077|   0|   1|    0|   0|    1|    0|    0|    0|   0|   0|(40000,[78,102,12...|\n",
       "|100281|   0|   0|    0|   1|    1|    0|    0|    1|   0|   0|(40000,[30,48,78,...|\n",
       "|100282|   0|   0|    0|   1|    0|    0|    0|    0|   1|   0|(40000,[379,585,7...|\n",
-      "|100283|   1|   0|    1|   0|    0|    0|    1|    1|   0|   0|(40000,[32,43,162...|\n",
-      "|100284|   0|   1|    1|   0|    1|    0|    0|    0|   0|   0|(40000,[312,794,1...|\n",
+      "|100289|   0|   0|    0|   0|    0|    0|    0|    0|   1|   0|(40000,[228,574,1...|\n",
+      "|100290|   1|   0|    0|   0|    1|    0|    0|    0|   0|   0|(40000,[1,20,115,...|\n",
+      "|100292|   0|   1|    0|   0|    0|    0|    1|    0|   1|   0|(40000,[115,207,5...|\n",
       "|100294|   1|   0|    0|   0|    0|    0|    0|    1|   0|   0|(40000,[207,574,5...|\n",
-      "|100295|   0|   0|    0|   0|    0|    0|    0|    0|   1|   0|(40000,[207,251,5...|\n",
-      "|100297|   1|   1|    0|   0|    0|    0|    0|    0|   0|   0|(40000,[69,189,79...|\n",
-      "|100298|   1|   0|    0|   0|    1|    0|    0|    0|   0|   0|(40000,[63,207,29...|\n",
-      "|100300|   0|   1|    0|   0|    0|    0|    0|    0|   0|   0|(40000,[1,200,207...|\n",
-      "|100302|   0|   0|    0|   0|    0|    1|    1|    0|   0|   0|(40000,[130,168,2...|\n",
-      "|100303|   0|   0|    0|   0|    1|    0|    0|    0|   0|   0|(40000,[71,130,20...|\n",
-      "|100307|   1|   0|    0|   0|    1|    0|    0|    0|   0|   1|(40000,[32,115,20...|\n",
+      "|100511|   1|   0|    0|   0|    0|    0|    0|    0|   0|   0|(40000,[207,273,2...|\n",
+      "|100517|   1|   1|    1|   1|    0|    0|    0|    1|   0|   0|(40000,[48,63,71,...|\n",
+      "|100742|   0|   1|    0|   0|    0|    0|    0|    1|   0|   0|(40000,[1,48,104,...|\n",
+      "|100746|   1|   0|    0|   0|    0|    0|    0|    0|   0|   1|(40000,[794,954,1...|\n",
+      "|100747|   0|   1|    0|   0|    0|    0|    0|    0|   0|   0|(40000,[187,207,2...|\n",
+      "|100748|   1|   0|    0|   0|    1|    0|    0|    0|   0|   0|(40000,[135,273,2...|\n",
+      "|100749|   1|   1|    0|   0|    0|    0|    1|    0|   1|   0|(40000,[35,122,12...|\n",
+      "|100753|   0|   0|    1|   1|    0|    0|    1|    0|   0|   0|(40000,[462,600,7...|\n",
+      "|100754|   0|   0|    0|   0|    1|    0|    0|    0|   0|   0|(40000,[20,32,48,...|\n",
+      "|100974|   0|   0|    1|   0|    0|    0|    0|    0|   0|   0|(40000,[794,890,1...|\n",
       "+------+----+----+-----+----+-----+-----+-----+-----+----+----+--------------------+\n",
       "only showing top 20 rows\n",
       "\n",
@@ -109,33 +137,32 @@
       "|    id|4019|2724|25000|4280|41401|53081|51881|42731|5849|5990|            features|\n",
       "+------+----+----+-----+----+-----+-----+-----+-----+----+----+--------------------+\n",
       "|100063|   1|   0|    0|   0|    0|    0|    1|    0|   0|   0|(40000,[115,187,2...|\n",
-      "|100068|   0|   1|    0|   1|    1|    0|    0|    0|   0|   0|(40000,[1,20,21,6...|\n",
-      "|100071|   0|   0|    0|   0|    0|    1|    0|    0|   0|   0|(40000,[10,32,78,...|\n",
-      "|100289|   0|   0|    0|   0|    0|    0|    0|    0|   1|   0|(40000,[228,574,1...|\n",
-      "|100290|   1|   0|    0|   0|    1|    0|    0|    0|   0|   0|(40000,[1,20,115,...|\n",
-      "|100292|   0|   1|    0|   0|    0|    0|    1|    0|   1|   0|(40000,[115,207,5...|\n",
-      "|100538|   1|   0|    0|   0|    1|    0|    0|    0|   0|   0|(40000,[48,207,29...|\n",
-      "|100749|   1|   1|    0|   0|    0|    0|    1|    0|   1|   0|(40000,[35,122,12...|\n",
-      "|100754|   0|   0|    0|   0|    1|    0|    0|    0|   0|   0|(40000,[20,32,48,...|\n",
-      "|100974|   0|   0|    1|   0|    0|    0|    0|    0|   0|   0|(40000,[794,890,1...|\n",
-      "|100978|   1|   1|    0|   0|    0|    0|    0|    0|   0|   0|(40000,[574,794,1...|\n",
-      "|100990|   0|   0|    0|   1|    0|    0|    0|    1|   1|   0|(40000,[138,574,6...|\n",
-      "|101208|   0|   0|    0|   1|    0|    0|    0|    1|   0|   0|(40000,[151,273,5...|\n",
-      "|101220|   1|   0|    1|   0|    1|    0|    0|    1|   0|   0|(40000,[379,697,7...|\n",
-      "|101227|   0|   0|    0|   0|    0|    0|    0|    1|   0|   0|(40000,[32,48,78,...|\n",
-      "|101432|   1|   1|    0|   0|    0|    0|    0|    0|   0|   0|(40000,[6,9,26,27...|\n",
-      "|101433|   1|   0|    1|   0|    1|    0|    0|    0|   0|   0|(40000,[32,104,20...|\n",
+      "|100283|   1|   0|    1|   0|    0|    0|    1|    1|   0|   0|(40000,[32,43,162...|\n",
+      "|100284|   0|   1|    1|   0|    1|    0|    0|    0|   0|   0|(40000,[312,794,1...|\n",
+      "|100522|   0|   0|    0|   1|    0|    1|    0|    0|   0|   1|(40000,[32,71,73,...|\n",
+      "|100524|   0|   0|    0|   0|    0|    0|    1|    1|   0|   0|(40000,[69,112,12...|\n",
+      "|100525|   0|   0|    0|   1|    0|    0|    1|    1|   0|   0|(40000,[32,100,20...|\n",
+      "|101211|   0|   0|    0|   1|    0|    0|    0|    0|   0|   1|(40000,[78,92,122...|\n",
       "|101440|   1|   0|    0|   1|    1|    0|    0|    0|   0|   0|(40000,[794,848,1...|\n",
-      "|101441|   1|   0|    0|   0|    0|    0|    0|    0|   1|   1|(40000,[10,122,30...|\n",
-      "|101675|   1|   0|    0|   0|    1|    0|    0|    0|   0|   0|(40000,[130,190,2...|\n",
+      "|101661|   0|   0|    0|   0|    1|    0|    0|    0|   0|   0|(40000,[196,207,2...|\n",
+      "|101902|   1|   1|    1|   0|    1|    1|    0|    0|   0|   0|(40000,[379,676,7...|\n",
+      "|101903|   1|   0|    0|   0|    0|    0|    0|    0|   0|   0|(40000,[152,794,2...|\n",
+      "|102127|   0|   1|    1|   0|    1|    0|    0|    0|   0|   0|(40000,[69,273,35...|\n",
+      "|102359|   0|   0|    0|   1|    1|    0|    0|    0|   0|   0|(40000,[60,233,46...|\n",
+      "|102589|   0|   0|    0|   0|    0|    0|    0|    1|   0|   0|(40000,[62,78,91,...|\n",
+      "|102821|   0|   1|    0|   0|    0|    0|    0|    0|   1|   0|(40000,[32,128,20...|\n",
+      "|103041|   1|   0|    0|   0|    0|    0|    1|    1|   1|   0|(40000,[794,1004,...|\n",
+      "|103045|   1|   0|    0|   1|    0|    0|    0|    1|   1|   0|(40000,[71,115,57...|\n",
+      "|103050|   0|   0|    1|   0|    0|    0|    0|    0|   0|   0|(40000,[48,103,13...|\n",
+      "|103053|   0|   0|    0|   0|    0|    0|    1|    0|   0|   0|(40000,[21,69,100...|\n",
+      "|103511|   0|   0|    0|   0|    0|    0|    1|    0|   0|   0|(40000,[75,85,122...|\n",
       "+------+----+----+-----+----+-----+-----+-----+-----+----+----+--------------------+\n",
-      "only showing top 20 rows\n",
-      "\n"
+      "only showing top 20 rows"
      ]
     }
    ],
    "source": [
-    "df = read_csv(\"./data/DATA_TFIDF_HADM_TOP10.csv\")\n",
+    "df = read_csv(\"/HdiNotebooks/DATA_TFIDF_HADM_TOP10.csv\")\n",
     "df_train, df_test = df.randomSplit(weights=[0.75, 0.25], seed=12345)\n",
     "df_train.cache()\n",
     "df_test.cache()\n",
@@ -154,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -256,43 +283,29 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": [
-    "clr = CustomLogisticRegression()\n",
-    "clr.fit(df_train)\n",
-    "df_pred_train = clr.predict(df_train)\n",
-    "df_pred_test = clr.predict(df_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "maxIter:  5\n",
-      "{'weightedPrecision': 0.3191686583865087, 'f1': 0.2422791139786058, 'weightedRecall': 0.25681892868879336, 'accuracy': 0.25681892868879397}\n",
-      "{'weightedPrecision': 0.10625387820800844, 'f1': 0.09190509299831698, 'weightedRecall': 0.12258191867350976, 'accuracy': 0.12258191867350968}\n",
+      "{'weightedPrecision': 0.32422971544867885, 'f1': 0.2487607767288541, 'weightedRecall': 0.26467105263157803, 'accuracy': 0.264671052631579}\n",
+      "{'weightedPrecision': 0.10921601442253366, 'f1': 0.09381365749094564, 'weightedRecall': 0.12595945679984275, 'accuracy': 0.12595945679984255}\n",
       "maxIter:  10\n",
-      "{'weightedPrecision': 0.7841250725433033, 'f1': 0.7620669774918355, 'weightedRecall': 0.7511994742030924, 'accuracy': 0.7511994742030891}\n",
-      "{'weightedPrecision': 0.12330947229469667, 'f1': 0.11949211928027403, 'weightedRecall': 0.12425977102250312, 'accuracy': 0.12425977102250296}\n",
+      "{'weightedPrecision': 0.7887577146619332, 'f1': 0.7696060340197072, 'weightedRecall': 0.7609539473684176, 'accuracy': 0.760953947368421}\n",
+      "{'weightedPrecision': 0.1290803781671321, 'f1': 0.1253548498061775, 'weightedRecall': 0.13225742963983492, 'accuracy': 0.13225742963983467}\n",
       "maxIter:  25\n",
-      "{'weightedPrecision': 0.9999712454814376, 'f1': 0.9999675758571632, 'weightedRecall': 0.9999671376930708, 'accuracy': 0.999967137693066}\n",
-      "{'weightedPrecision': 0.10715632789997416, 'f1': 0.10053642873404066, 'weightedRecall': 0.09800631662060805, 'accuracy': 0.09800631662060798}\n",
+      "{'weightedPrecision': 0.9998710805070459, 'f1': 0.9998681263464682, 'weightedRecall': 0.9998684210526279, 'accuracy': 0.9998684210526316}\n",
+      "{'weightedPrecision': 0.10314755726388049, 'f1': 0.09796554367340238, 'weightedRecall': 0.09781539067112782, 'accuracy': 0.09781539067112772}\n",
       "maxIter:  50\n",
-      "{'weightedPrecision': 1.0000000000000049, 'f1': 1.0000000000000049, 'weightedRecall': 1.0000000000000049, 'accuracy': 1.0}\n",
-      "{'weightedPrecision': 0.10566124747545828, 'f1': 0.09863138825157139, 'weightedRecall': 0.09632846427161476, 'accuracy': 0.09632846427161469}\n",
+      "{'weightedPrecision': 0.9999999999999962, 'f1': 0.9999999999999962, 'weightedRecall': 0.9999999999999962, 'accuracy': 1.0}\n",
+      "{'weightedPrecision': 0.10355121204655478, 'f1': 0.09825534639138672, 'weightedRecall': 0.09781539067112782, 'accuracy': 0.09781539067112772}\n",
       "maxIter:  75\n",
-      "{'weightedPrecision': 1.0000000000000049, 'f1': 1.0000000000000049, 'weightedRecall': 1.0000000000000049, 'accuracy': 1.0}\n",
-      "{'weightedPrecision': 0.10566124747545828, 'f1': 0.09863138825157139, 'weightedRecall': 0.09632846427161476, 'accuracy': 0.09632846427161469}\n",
+      "{'weightedPrecision': 0.9999999999999962, 'f1': 0.9999999999999962, 'weightedRecall': 0.9999999999999962, 'accuracy': 1.0}\n",
+      "{'weightedPrecision': 0.10355121204655478, 'f1': 0.09825534639138672, 'weightedRecall': 0.09781539067112782, 'accuracy': 0.09781539067112772}\n",
       "maxIter:  100\n",
-      "{'weightedPrecision': 1.0000000000000049, 'f1': 1.0000000000000049, 'weightedRecall': 1.0000000000000049, 'accuracy': 1.0}\n",
-      "{'weightedPrecision': 0.10566124747545828, 'f1': 0.09863138825157139, 'weightedRecall': 0.09632846427161476, 'accuracy': 0.09632846427161469}\n"
+      "{'weightedPrecision': 0.9999999999999962, 'f1': 0.9999999999999962, 'weightedRecall': 0.9999999999999962, 'accuracy': 1.0}\n",
+      "{'weightedPrecision': 0.10355121204655478, 'f1': 0.09825534639138672, 'weightedRecall': 0.09781539067112782, 'accuracy': 0.09781539067112772}"
      ]
     }
    ],
@@ -324,9 +337,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -375,13 +388,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "maxDepth:  5\n",
+      "{'weightedPrecision': 0.06003821647001132, 'f1': 0.02490492183351698, 'weightedRecall': 0.06743421052631579, 'accuracy': 0.06743421052631579}\n",
+      "{'weightedPrecision': 0.06822878344400911, 'f1': 0.022155707150682047, 'weightedRecall': 0.06366856917929542, 'accuracy': 0.06366856917929542}\n",
+      "maxDepth:  10\n",
+      "{'weightedPrecision': 0.13480532836332554, 'f1': 0.06533599216963552, 'weightedRecall': 0.10861842105263164, 'accuracy': 0.10861842105263157}\n",
+      "{'weightedPrecision': 0.07147709071387036, 'f1': 0.04029352952448755, 'weightedRecall': 0.08364495178114549, 'accuracy': 0.08364495178114545}\n",
+      "maxDepth:  20\n",
+      "{'weightedPrecision': 0.4457382831587539, 'f1': 0.2741693567900213, 'weightedRecall': 0.29098684210526216, 'accuracy': 0.29098684210526315}\n",
+      "{'weightedPrecision': 0.08816127543442014, 'f1': 0.06109304953121328, 'weightedRecall': 0.10096437709112385, 'accuracy': 0.1009643770911238}\n",
+      "maxDepth:  30\n",
+      "{'weightedPrecision': 0.6360990909870188, 'f1': 0.48942733688808804, 'weightedRecall': 0.48480263157894515, 'accuracy': 0.4848026315789474}\n",
+      "{'weightedPrecision': 0.10370873560138762, 'f1': 0.07552076371132027, 'weightedRecall': 0.11070655382798665, 'accuracy': 0.11070655382798662}"
+     ]
+    }
+   ],
    "source": [
-    "for maxDepth in [5, 10, 25, 50, 75, 100]:\n",
+    "for maxDepth in [5, 10, 20, 30]:\n",
     "    clr = CustomRandomForestClassifier()\n",
     "    clr.fit(df_train, maxDepth=maxDepth)\n",
     "    df_pred_train = clr.predict(df_train)\n",
@@ -404,15 +436,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Apache Toree - PySpark",
-   "language": "python",
-   "name": "apache_toree_pyspark"
+   "display_name": "PySpark",
+   "language": "",
+   "name": "pysparkkernel"
   },
   "language_info": {
-   "file_extension": ".py",
-   "name": "python",
-   "pygments_lexer": "python",
-   "version": "2.7.13\n"
+   "codemirror_mode": {
+    "name": "python",
+    "version": 2
+   },
+   "mimetype": "text/x-python",
+   "name": "pyspark",
+   "pygments_lexer": "python2"
   }
  },
  "nbformat": 4,
