--- a/code/Project_bdfh_word2vec.ipynb
+++ b/code/Project_bdfh_word2vec.ipynb
@@ -177,6 +177,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# Cleanning the data\n",
+    "import re\n",
+    "def preprocessor(text):\n",
+    "    text = re.sub('<[^>]*>', '', text)\n",
+    "    text = re.sub('[\\W]+', ' ', text.lower()) \n",
+    "    return text\n",
+    "\n",
+    "df['text3'] = df['text'].apply(preprocessor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# Create tokens\n",
+    "token_review=[]\n",
+    "for i in range(df['text3'].shape[0]):\n",
+    "    review = df['text3'][i]\n",
+    "    token_review.append([i for i in review.split()])\n",
+    "\n",
+    "len(token_review)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
@@ -246,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -258,22 +297,57 @@
     "#model_w2v.save('./model_word2vec')\n",
     "\n",
     "# open a saved word2vec model \n",
-    "import gensim\n",
-    "model_w2v=gensim.models.Word2Vec.load('./model_word2vec')"
+    "#import gensim\n",
+    "#model_w2v=gensim.models.Word2Vec.load('./model_word2vec')\n",
+    "\n",
+    "\n",
+    "#model_w2v.wv.save_word2vec_format('./model_word2vec.txt', binary=False)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "#### Run  if you are using Glove type format\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Glove Model\n",
+      "('Done.', 33837, ' words loaded!')\n"
+     ]
+    }
+   ],
    "source": [
-    "#gensim.parsing.preprocessing.remove_stopwords(df.iloc[0]['text2'])\n",
-    "#gensim.parsing.preprocessing.remove_stopwords(token_review[0])"
+    "# Run this cell if you are using Glove type format\n",
+    "def loadGloveModel(gloveFile):\n",
+    "    print(\"Loading Glove Model\")\n",
+    "    f = open(gloveFile,'r')\n",
+    "    model = {}\n",
+    "    for line in f:\n",
+    "        splitLine = line.split()\n",
+    "        word = splitLine[0]\n",
+    "        embedding = [float(val) for val in splitLine[1:]]\n",
+    "        model[word] = embedding\n",
+    "    print(\"Done.\",len(model),\" words loaded!\")\n",
+    "    return model\n",
+    "\n",
+    "model_w2v=loadGloveModel(\"./model_word2vec.txt\")"
    ]
   },
   {
@@ -289,7 +363,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/cesarosorio/anaconda/envs/BDFH_project/lib/python2.7/site-packages/ipykernel/__main__.py:3: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
+      "/Users/cesarosorio/anaconda/envs/BDFH_project2/lib/python2.7/site-packages/ipykernel/__main__.py:3: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
       "  app.launch_new_instance()\n"
      ]
     },
@@ -311,12 +385,14 @@
     "\n",
     "# Cleanning the data\n",
     "import re\n",
+    "\n",
     "def preprocessor(text):\n",
     "    text = re.sub('<[^>]*>', '', text)\n",
     "    text = re.sub('[\\W]+', ' ', text.lower()) \n",
     "    text = re.sub(\" \\d+\", \" \", text)\n",
-    "    text = gensim.parsing.preprocessing.remove_stopwords(text)\n",
+    "    #text = gensim.parsing.preprocessing.remove_stopwords(text)\n",
     "    return text\n",
+    "\n",
     "\n",
     "df['text3'] = df['text'].apply(preprocessor)\n",
     "\n",
@@ -331,15 +407,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
     "import numpy as np  # Make sure that numpy is imported\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "keys_updated = [word for word in model_w2v.keys() if word not in stopwords.words('english')]\n",
+    "index2word_set=set(keys_updated)\n",
     "\n",
     "def makeFeatureVec(words, model, num_features):\n",
     "    # Function to average all of the word vectors in a given\n",
@@ -352,7 +432,12 @@
     "    # \n",
     "    # Index2word is a list that contains the names of the words in \n",
     "    # the model's vocabulary. Convert it to a set, for speed \n",
-    "    index2word_set = set(model.wv.index2word)\n",
+    "    #index2word_set = set(model.wv.index2word) #activate if using gensim\n",
+    "\n",
+    "    # activate if uploaded text version\n",
+    "    #index2word_set=set(keys_updated)\n",
+    "    \n",
+    "    \n",
     "    #\n",
     "    # Loop over each word in the review and, if it is in the model's\n",
     "    # vocaublary, add its feature vector to the total\n",
@@ -363,12 +448,12 @@
     "    # \n",
     "    # Divide the result by the number of words to get the average\n",
     "    featureVec = np.divide(featureVec,nwords)\n",
-    "    return featureVec"
+    "    return featureVec\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -378,29 +463,29 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.24209931,  0.57821953, -0.1097922 , -0.04088522,  0.76877069,\n",
-       "        1.2996639 ,  0.41623062,  0.1442489 ,  0.77406311, -0.52265239,\n",
-       "        0.76842451,  0.15562041, -0.46637994,  0.01335333, -0.25037864,\n",
-       "       -0.69962567,  0.49107403,  0.38508704, -0.21999806,  0.18665832,\n",
-       "       -0.13348928, -0.7613135 ,  0.46283022,  0.73189414, -0.2284956 ,\n",
-       "        0.11714122, -0.04166868, -0.77739626,  0.08127863, -0.08135029,\n",
-       "        0.57344264,  0.13657698,  0.02911675, -0.40416399,  0.75751036,\n",
-       "        0.34503514,  0.33877051, -0.43589294,  0.31269494, -0.40871796,\n",
-       "       -0.0605538 , -0.3819671 ,  0.2187874 , -0.12320303,  0.40263268,\n",
-       "        0.56866163,  0.01980313,  0.33025518,  0.75881159,  0.17011712,\n",
-       "       -0.40949446, -0.95047182, -0.07816353,  0.39292824, -1.02860975,\n",
-       "        0.5054608 , -0.16936162, -0.43043894, -0.49423882,  0.09224224,\n",
-       "       -0.44405714, -0.43945932, -0.55873865,  0.37785959, -0.46316189,\n",
-       "        0.03862812, -0.63376772, -0.20108515,  1.03987992, -0.2564714 ,\n",
-       "       -0.40555984,  0.95026582,  0.42771217,  0.28002957,  0.12500089,\n",
-       "       -0.52250814, -0.39604068,  0.72434151, -0.60609394, -0.25365883,\n",
-       "       -0.99763066, -0.24476157, -0.03489983, -0.57358372,  0.46041423,\n",
-       "       -0.47489381,  0.20470896,  0.41828531, -0.63501292, -0.60646939,\n",
-       "       -0.44219416,  0.58599693, -0.43721002, -0.04096106, -0.41224933,\n",
-       "        0.15308037, -0.36685351, -0.53161031, -0.3794134 ,  0.78132129], dtype=float32)"
+       "array([ 0.32124942,  0.42867058, -0.1607722 , -0.255455  ,  0.80822697,\n",
+       "        1.42863403,  0.42433648,  0.45289934,  0.93406838, -0.44348111,\n",
+       "        0.7356697 ,  0.09904312, -0.51461918,  0.09862627, -0.1717864 ,\n",
+       "       -0.49117593,  0.82210046,  0.3637609 , -0.0391038 ,  0.12883505,\n",
+       "       -0.22609152, -0.75877765,  0.43139248,  0.65939814, -0.26636229,\n",
+       "       -0.18819797, -0.11727432, -0.63130124,  0.17328437, -0.11704872,\n",
+       "        0.42489609,  0.17380838, -0.10591966, -0.43874571,  0.71558041,\n",
+       "        0.359048  ,  0.23391739, -0.40168188,  0.41330036, -0.40955439,\n",
+       "       -0.17525836, -0.42868377,  0.21771216, -0.17365117,  0.32529705,\n",
+       "        0.35938327,  0.22340736,  0.424673  ,  0.9110962 ,  0.38621649,\n",
+       "       -0.30929509, -0.84243643, -0.05837796,  0.20928157, -0.75140584,\n",
+       "        0.50740408, -0.16328134, -0.58607459, -0.46503013,  0.106976  ,\n",
+       "       -0.42876902, -0.49975919, -0.4134568 ,  0.17556357, -0.44255696,\n",
+       "        0.04985585, -0.54240325, -0.17266752,  0.95468491, -0.25155782,\n",
+       "       -0.29391337,  0.86842163,  0.42711619,  0.3839184 ,  0.00859162,\n",
+       "       -0.61604329, -0.28729963,  0.72193665, -0.55504583, -0.25179639,\n",
+       "       -0.7476581 , -0.21585399,  0.07863061, -0.79934384,  0.50420582,\n",
+       "       -0.62328266,  0.28623525,  0.43216634, -0.46330423, -0.63179952,\n",
+       "       -0.47824082,  0.61117969, -0.36528092,  0.11655667, -0.3960547 ,\n",
+       "        0.15617174, -0.33653396, -0.39358711, -0.33047931,  0.8443866 ])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -424,7 +509,7 @@
     "    # the average feature vector for each one and return a 2D numpy array \n",
     "    # \n",
     "    # Initialize a counter\n",
-    "    counter = 0.\n",
+    "    counter = 0\n",
     "    # \n",
     "    # Preallocate a 2D numpy array, for speed\n",
     "    reviewFeatureVecs = np.zeros((len(reviews),num_features),dtype=\"float32\")\n",
@@ -432,21 +517,21 @@
     "    # Loop through the reviews\n",
     "    for review in reviews:\n",
     "       #\n",
-    "       # Print a status message every 1000th review\n",
-    "       if counter%10000. == 0.:\n",
+    "       # Print a status message every 10000th review\n",
+    "       if counter%10000 == 0:\n",
     "           print \"Review %d of %d\" % (counter, len(reviews))\n",
     "       # \n",
     "       # Call the function (defined above) that makes average feature vectors\n",
     "       reviewFeatureVecs[counter] = makeFeatureVec(review, model,num_features)\n",
     "       #\n",
     "       # Increment the counter\n",
-    "       counter = counter + 1.\n",
+    "       counter = counter + 1\n",
     "    return reviewFeatureVecs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -463,17 +548,32 @@
       "Review 20000 of 59652\n",
       "Review 30000 of 59652\n",
       "Review 40000 of 59652\n",
-      "Review 50000 of 59652\n"
+      "Review 50000 of 59652\n",
+      "('Time taken for Word2vec avg vector per note calculation: ', 217.7224440574646, 'seconds.')\n"
      ]
     }
    ],
    "source": [
-    "final_w2v=getAvgFeatureVecs(token_review, model_w2v, num_features=100)"
+    "from time import time\n",
+    "t0 = time()\n",
+    "final_w2v=getAvgFeatureVecs(token_review, model_w2v, num_features=100)\n",
+    "elapsed=time() - t0\n",
+    "print(\"Time taken for Word2vec avg vector per note calculation: \", elapsed, \"seconds.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "#### Create train set and test set to use Machine Learning model\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -484,32 +584,96 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "((50000, 100), (9652, 100))\n"
+      "(29826, 14913, 14913)\n"
      ]
     }
    ],
    "source": [
     "# Create train set and test set to use Machine Learning model\n",
+    "#you need to add the labels\n",
+    "import random\n",
+    "idx=list(range(len(token_review)))\n",
+    "random.seed(1234)\n",
+    "random.shuffle(idx)\n",
+    "idx_train= idx[0:int(len(final_w2v)*0.50)]\n",
+    "idx_val= idx[int(len(final_w2v)*0.50):int(len(final_w2v)*0.75)]\n",
+    "idx_test= idx[int(len(final_w2v)*0.75):len(final_w2v)]\n",
     "\n",
-    "import numpy as np\n",
-    "n_break=50000  # numbers of docs in training set\n",
-    "size = 100 # define when running doc2vec\n",
-    "n_final = 59652\n",
-    "X_train_w2v = np.zeros((n_break, size))\n",
-    "X_test_w2v = np.zeros((n_final - n_break, size))\n",
+    "train_set = [final_w2v[i] for i in idx_train]\n",
+    "val_set = [final_w2v[i] for i in idx_val]\n",
+    "test_set = [final_w2v[i] for i in idx_test]\n",
     "\n",
-    "for i in range(len(X_train_w2v)):\n",
-    "    X_train_w2v[i] = final_w2v[i]\n",
-    "    \n",
-    "for i in range(n_final - n_break):\n",
-    "    X_test_w2v[i] = final_w2v[i+n_break]\n",
     "\n",
-    "print(X_train_w2v.shape ,X_test_w2v.shape )"
+    "print(len(train_set), len(val_set)  ,len(test_set))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "#### Top 10 notes similar to note '0' or first note in dataset (to compare results to Doc2vec)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1.0\n",
+      "10632 0.864\n",
+      "54970 0.863\n",
+      "59628 0.851\n",
+      "58246 0.84\n",
+      "53046 0.833\n",
+      "56235 0.83\n",
+      "53047 0.828\n",
+      "58117 0.827\n",
+      "36272 0.823\n",
+      "1379 0.82\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Top 10 notes similar to note '0' or first note in dataset (to compare results to Doc2vec)\n",
+    "\n",
+    "import scipy\n",
+    "from scipy import spatial\n",
+    "\n",
+    "cosine_results=[]\n",
+    "for i in range(0,final_w2v.shape[0]):\n",
+    "    result=0\n",
+    "    result = 1 - spatial.distance.cosine(final_w2v[0], final_w2v[i])\n",
+    "    cosine_results.append(float(\"{0:.3f}\".format(result)))\n",
+    "    \n",
+    "list_index=sorted(range(len(cosine_results)), key=lambda i: cosine_results[i] , reverse=True)[:11]\n",
+    "for i in list_index:\n",
+    "    print i, cosine_results[i]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "### Try TFIDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -519,25 +683,65 @@
     {
      "data": {
       "text/plain": [
-       "[('sarcoma', 0.7263417840003967),\n",
-       " ('rcc', 0.7242584228515625),\n",
-       " ('melenoma', 0.7210500240325928),\n",
-       " ('leiomyosarcoma', 0.7176036834716797),\n",
-       " ('nsclc', 0.6890457272529602),\n",
-       " ('fibrosarcoma', 0.6835242509841919),\n",
-       " ('mesothelioma', 0.6819085478782654),\n",
-       " ('adenocarcinoma', 0.6768175363540649),\n",
-       " ('thymoma', 0.6764349937438965),\n",
-       " ('sclc', 0.6748671531677246)]"
+       "(59652, 24345)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_w2v.most_similar('melanoma')"
+    "# Transform the dataframe to a sparse Tdidf matrix\n",
+    "#from sklearn.feature_extraction.text import CountVectorizer\n",
+    "import numpy as np\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "# Now we create the sparse matrix of tfidf values\n",
+    "tfidf = TfidfVectorizer(input='content',ngram_range=(1, 1),stop_words='english', min_df=10, max_df=0.8)\n",
+    "# I select to remove stopwords and minimun doc frequency =10 to delete very unusual words\n",
+    "# that only show up in less than 10 notes (out of 59k notes available) \n",
+    "\n",
+    "dtm = tfidf.fit_transform([c for c in df['text3']])\n",
+    "vocab = np.array(tfidf.get_feature_names())\n",
+    "dtm = dtm.toarray()  # convert to a regular array\n",
+    "vocab = np.array(vocab)\n",
+    "dtm.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(29826, 14913, 14913)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create train set and test set to use Machine Learning model\n",
+    "# you need to add the label\n",
+    "import random\n",
+    "idx=list(range(len(token_review)))\n",
+    "random.seed(1234)\n",
+    "random.shuffle(idx)\n",
+    "idx_train= idx[0:int(len(final_w2v)*0.50)]\n",
+    "idx_val= idx[int(len(final_w2v)*0.50):int(len(final_w2v)*0.75)]\n",
+    "idx_test= idx[int(len(final_w2v)*0.75):len(final_w2v)]\n",
+    "\n",
+    "train_set_tfidf = [dtm[i] for i in idx_train]\n",
+    "val_set_tfidf = [dtm[i] for i in idx_val]\n",
+    "test_set_tfidf = [dtm[i] for i in idx_test]\n",
+    "\n",
+    "print(len(train_set_tfidf), len(val_set_tfidf)  ,len(test_set_tfidf))"
    ]
   },
   {
@@ -549,9 +753,7 @@
     "editable": true
    },
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -563,7 +765,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2.0
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -574,5 +776,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
