fixed ML baseline

--- a/code/describe_icd9code.ipynb
+++ b/code/describe_icd9code.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -72,8 +72,8 @@
     "                      StructField(\"cgid\", IntegerType(), True),\n",
     "                      StructField(\"iserror\", IntegerType(), True),\n",
     "                      StructField(\"text\", StringType(), True)])\n",
-    "#df_ne = spark.read.csv(\"./data/NOTEEVENTS-2.csv\",\n",
-    "df_ne = spark.read.csv(\"./data/NOTEEVENTS-2sample.csv\",\n",
+    "df_ne = spark.read.csv(\"./data/NOTEEVENTS-2.csv\",\n",
+    "# df_ne = spark.read.csv(\"./data/NOTEEVENTS-2sample.csv\",\n",
     "                       header=True,\n",
     "                       schema=ne_struct)\n",
     "df_ne.registerTempTable(\"noteevents\")\n",
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -199,7 +199,7 @@
       "+--------+--------------------------+-----------------------+\n",
       "|count(1)|count(DISTINCT subject_id)|count(DISTINCT hadm_id)|\n",
       "+--------+--------------------------+-----------------------+\n",
-      "|   59652|                     41127|                  52726|\n",
+      "|       0|                         0|                      0|\n",
       "+--------+--------------------------+-----------------------+\n",
       "\n"
      ]
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -308,25 +308,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-----------------+\n",
-      "|category         |\n",
-      "+-----------------+\n",
-      "|ECG              |\n",
-      "|Respiratory      |\n",
-      "|Nursing          |\n",
-      "|General          |\n",
-      "|Consult          |\n",
-      "|Echo             |\n",
-      "|Nutrition        |\n",
-      "|Physician        |\n",
-      "|Pharmacy         |\n",
-      "|Rehab Services   |\n",
-      "|Case Management  |\n",
-      "|Radiology        |\n",
-      "|Nursing/other    |\n",
-      "|Discharge summary|\n",
-      "|Social Work      |\n",
-      "+-----------------+\n",
+      "+-------------------+\n",
+      "|category           |\n",
+      "+-------------------+\n",
+      "|2151-02-06 05:45:00|\n",
+      "|2113-03-05 19:14:00|\n",
+      "|2151-02-14 10:26:00|\n",
+      "|2163-01-16 02:36:00|\n",
+      "|2163-03-11 09:02:00|\n",
+      "|2165-03-28 18:38:00|\n",
+      "|2163-01-25 08:54:00|\n",
+      "|2163-01-22 06:44:00|\n",
+      "|2165-03-28 07:03:00|\n",
+      "|2173-02-05 10:03:00|\n",
+      "|2105-01-03 16:39:00|\n",
+      "|2176-03-11 09:43:00|\n",
+      "|2189-12-11 12:44:00|\n",
+      "|2180-02-18 10:20:00|\n",
+      "|2133-01-02 07:01:00|\n",
+      "|2132-12-29 18:55:00|\n",
+      "|2166-01-29 17:05:00|\n",
+      "|2204-12-31 04:59:00|\n",
+      "|2189-12-10 17:29:00|\n",
+      "|2114-03-12 11:30:00|\n",
+      "+-------------------+\n",
+      "only showing top 20 rows\n",
       "\n"
      ]
     }
