--- a/code/ml_baseline.ipynb
+++ b/code/ml_baseline.ipynb
@@ -82,26 +82,31 @@
    "outputs": [],
    "source": [
     "from pyspark.ml.evaluation import MulticlassClassificationEvaluator\n",
+    "from pyspark.mllib.evaluation import MulticlassMetrics\n",
     "from pyspark.sql.types import StringType, IntegerType\n",
     "import pyspark.sql.functions as F\n",
     "\n",
     "concat_udf = F.udf(lambda cols: float(int(\"\".join([str(int(x)) for x in cols]), 2)), DoubleType())\n",
     "\n",
-    "def evaluate(df, labelCols, metrics=[\"f1\", \"weightedPrecision\", \"weightedRecall\", \"accuracy\"]):\n",
-    "    evaluator = MulticlassClassificationEvaluator()\n",
+    "def evaluate(df, labelCols):\n",
     "    labelCols2 = [i+\"_pred\" for i in labelCols]\n",
+    "    df.cache()\n",
     "    \n",
-    "    output = {}\n",
-    "    for m in metrics:\n",
-    "        results = []\n",
-    "        for i in xrange(len(labelCols)):\n",
-    "            r = evaluator.evaluate(df, {evaluator.metricName: m,\n",
-    "                                        evaluator.predictionCol: labelCols2[i],\n",
-    "                                        evaluator.labelCol: labelCols[i]})\n",
-    "            results.append(r)\n",
-    "        output[m] = sum(results) / len(results)\n",
-    "        \n",
-    "    return output\n",
+    "    r_list = {i: [] for i in ['accuracy', 'precision', 'recall', 'fmeasure']}\n",
+    "    for i in xrange(len(labelCols)):\n",
+    "        predandlabels = df.select(labelCols2[i], labelCols[i]).rdd \\\n",
+    "                        .map(lambda x: (float(x[labelCols2[i]]), float(x[labelCols[i]])))\n",
+    "        metrics = MulticlassMetrics(predandlabels)\n",
+    "\n",
+    "        # print metrics.confusionMatrix()\n",
+    "        r_list['accuracy'].append(metrics.accuracy)\n",
+    "        r_list['precision'].append(metrics.precision(1.0))\n",
+    "        r_list['recall'].append(metrics.recall(1.0))\n",
+    "        r_list['fmeasure'].append(metrics.fMeasure(label=1.0))\n",
+    "\n",
+    "    results = {m: (sum(rs) / len(rs)) for (m, rs) in r_list.iteritems()}\n",
+    "            \n",
+    "    return results\n",
     "\n",
     "def evaluate_em(df, labelCols, metrics=[\"f1\", \"weightedPrecision\", \"weightedRecall\", \"accuracy\"]):\n",
     "    evaluator = MulticlassClassificationEvaluator()\n",
@@ -116,8 +121,7 @@
     "                                         evaluator.labelCol: \"_label\"})\n",
     "        output[m] = result\n",
     "        \n",
-    "    return output\n",
-    "    "
+    "    return output"
    ]
   },
   {
@@ -254,8 +258,8 @@
    "outputs": [],
    "source": [
     "def print_latex(inum, m1, m2, m3, m4):\n",
-    "    r1 = \"{weightedPrecision:.4f} & {weightedRecall:.4f} & {f1:.4f} & {accuracy:.4f}\".format(**m1)\n",
-    "    r2 = \"{weightedPrecision:.4f} & {weightedRecall:.4f} & {f1:.4f} & {accuracy:.4f}\".format(**m2)\n",
+    "    r1 = \"{precision:.4f} & {recall:.4f} & {fmeasure:.4f} & {accuracy:.4f}\".format(**m1)\n",
+    "    r2 = \"{precision:.4f} & {recall:.4f} & {fmeasure:.4f} & {accuracy:.4f}\".format(**m2)\n",
     "    r3 = \"{accuracy:.4f}\".format(**m3)\n",
     "    r4 = \"{accuracy:.4f}\".format(**m4)\n",
     "    return \"{0} & {1} & {2} & {3} & {4} \\\\\\\\ \\hline\".format(inum, r1, r3, r2, r4)\n",
@@ -285,22 +289,48 @@
     "        r4 = evaluate_em(df_pred_test, clr.labelCols, metrics=[\"accuracy\"])\n",
     "        \n",
     "        print print_latex(maxIter, r1, r2, r3, r4)\n",
-    "        \n",
-    "#     for maxDepth in [5, 10, 20, 30]:\n",
-    "#         clr = CustomRandomForestClassifier()\n",
-    "#         clr.fit(df_train, maxDepth=maxDepth)\n",
-    "#         df_pred_train = clr.predict(df_train)\n",
-    "#         df_pred_test = clr.predict(df_test)\n",
-    "\n",
-    "#         print \"maxDepth: \", maxDepth\n",
-    "#         print evaluate(df_pred_train, clr.labelCols)\n",
-    "#         print evaluate(df_pred_test, clr.labelCols)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def run_experiment2(input_name):\n",
+    "    df_train = read_csv(\"{0}_train.csv\".format(input_name))\n",
+    "    df_val = read_csv(\"{0}_val.csv\".format(input_name))\n",
+    "    df_test = read_csv(\"{0}_test.csv\".format(input_name))\n",
+    "\n",
+    "    df_train = df_train.union(df_val)\n",
+    "    \n",
+    "    df_train.cache()\n",
+    "    df_test.cache()\n",
+    "    \n",
+    "    print input_name\n",
+    "    print \"Train, Test:\", df_train.count(), df_test.count()\n",
+    "    print \"iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\"        \n",
+    "    for maxDepth in [5, 10, 20, 30]:\n",
+    "        clr = CustomRandomForestClassifier()\n",
+    "        clr.fit(df_train, maxDepth=maxDepth)\n",
+    "        df_pred_train = clr.predict(df_train)\n",
+    "        df_pred_test = clr.predict(df_test)\n",
+    "\n",
+    "        r1 = evaluate(df_pred_train, clr.labelCols)\n",
+    "        r2 = evaluate(df_pred_test, clr.labelCols)\n",
+    "        r3 = evaluate_em(df_pred_train, clr.labelCols, metrics=[\"accuracy\"])\n",
+    "        r4 = evaluate_em(df_pred_test, clr.labelCols, metrics=[\"accuracy\"])\n",
+    "        \n",
+    "        print print_latex(maxDepth, r1, r2, r3, r4)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -311,31 +341,31 @@
      "text": [
       "./data/DATA_TFIDFV0_HADM_TOP10\n",
       "Train, Test: 39544 13182\n",
-      "iter & train prec & recall & f1 & accuracy & test prec & recall & f1 & accuracy \n",
-      "5 & 0.8833 & 0.8848 & 0.8702 & 0.8848 & 0.3809 & 0.8244 & 0.8417 & 0.8163 & 0.8417 & 0.2704 \\\\ \\hline\n",
-      "10 & 0.9699 & 0.9701 & 0.9697 & 0.9701 & 0.7916 & 0.8293 & 0.8411 & 0.8328 & 0.8411 & 0.2558 \\\\ \\hline\n",
-      "25 & 0.9999 & 0.9999 & 0.9999 & 0.9999 & 0.9991 & 0.8121 & 0.8206 & 0.8156 & 0.8206 & 0.2189 \\\\ \\hline\n",
-      "50 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.8104 & 0.8190 & 0.8140 & 0.8190 & 0.2176 \\\\ \\hline\n",
-      "75 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.8104 & 0.8190 & 0.8140 & 0.8190 & 0.2176 \\\\ \\hline\n",
-      "100 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.8104 & 0.8190 & 0.8140 & 0.8190 & 0.2176 \\\\ \\hline\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.8678 & 0.4640 & 0.5905 & 0.8848 & 0.3809 & 0.6756 & 0.3032 & 0.4036 & 0.8417 & 0.2704 \\\\ \\hline\n",
+      "10 & 0.9602 & 0.8912 & 0.9241 & 0.9701 & 0.7916 & 0.5964 & 0.4561 & 0.5138 & 0.8411 & 0.2558 \\\\ \\hline\n",
+      "25 & 0.9998 & 0.9999 & 0.9999 & 0.9999 & 0.9991 & 0.5208 & 0.4554 & 0.4844 & 0.8206 & 0.2189 \\\\ \\hline\n",
+      "50 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.5165 & 0.4516 & 0.4804 & 0.8190 & 0.2176 \\\\ \\hline\n",
+      "75 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.5165 & 0.4515 & 0.4804 & 0.8190 & 0.2176 \\\\ \\hline\n",
+      "100 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.5165 & 0.4515 & 0.4804 & 0.8190 & 0.2176 \\\\ \\hline\n",
       "./data/DATA_TFIDFV1_HADM_TOP10\n",
       "Train, Test: 39544 13182\n",
-      "iter & train prec & recall & f1 & accuracy & test prec & recall & f1 & accuracy \n",
-      "5 & 0.8862 & 0.8915 & 0.8833 & 0.8915 & 0.3833 & 0.8371 & 0.8513 & 0.8365 & 0.8513 & 0.2847 \\\\ \\hline\n",
-      "10 & 0.9710 & 0.9711 & 0.9710 & 0.9711 & 0.7685 & 0.8320 & 0.8396 & 0.8350 & 0.8396 & 0.2607 \\\\ \\hline\n",
-      "25 & 0.9996 & 0.9996 & 0.9996 & 0.9996 & 0.9960 & 0.8122 & 0.8150 & 0.8135 & 0.8150 & 0.2108 \\\\ \\hline\n",
-      "50 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.8099 & 0.8122 & 0.8110 & 0.8122 & 0.2073 \\\\ \\hline\n",
-      "75 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.8098 & 0.8121 & 0.8109 & 0.8121 & 0.2069 \\\\ \\hline\n",
-      "100 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.8098 & 0.8121 & 0.8109 & 0.8121 & 0.2069 \\\\ \\hline\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.8060 & 0.5491 & 0.6508 & 0.8915 & 0.3833 & 0.6689 & 0.4006 & 0.4977 & 0.8513 & 0.2847 \\\\ \\hline\n",
+      "10 & 0.9415 & 0.9169 & 0.9289 & 0.9711 & 0.7685 & 0.5805 & 0.4995 & 0.5358 & 0.8396 & 0.2607 \\\\ \\hline\n",
+      "25 & 0.9994 & 0.9994 & 0.9994 & 0.9996 & 0.9960 & 0.5050 & 0.4827 & 0.4933 & 0.8150 & 0.2108 \\\\ \\hline\n",
+      "50 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.4976 & 0.4808 & 0.4889 & 0.8122 & 0.2073 \\\\ \\hline\n",
+      "75 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.4974 & 0.4807 & 0.4887 & 0.8121 & 0.2069 \\\\ \\hline\n",
+      "100 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.4974 & 0.4807 & 0.4887 & 0.8121 & 0.2069 \\\\ \\hline\n",
       "./data/DATA_WORD2VEC_HADM_TOP10\n",
       "Train, Test: 39544 13182\n",
-      "iter & train prec & recall & f1 & accuracy & test prec & recall & f1 & accuracy \n",
-      "5 & 0.7852 & 0.8255 & 0.7868 & 0.8255 & 0.2429 & 0.7836 & 0.8242 & 0.7855 & 0.8242 & 0.2400 \\\\ \\hline\n",
-      "10 & 0.8037 & 0.8329 & 0.7998 & 0.8329 & 0.2516 & 0.7992 & 0.8313 & 0.7977 & 0.8313 & 0.2458 \\\\ \\hline\n",
-      "25 & 0.8098 & 0.8364 & 0.8060 & 0.8364 & 0.2581 & 0.8038 & 0.8340 & 0.8029 & 0.8340 & 0.2519 \\\\ \\hline\n",
-      "50 & 0.8098 & 0.8365 & 0.8060 & 0.8365 & 0.2581 & 0.8042 & 0.8342 & 0.8032 & 0.8342 & 0.2525 \\\\ \\hline\n",
-      "75 & 0.8098 & 0.8364 & 0.8060 & 0.8364 & 0.2585 & 0.8044 & 0.8343 & 0.8034 & 0.8343 & 0.2530 \\\\ \\hline\n",
-      "100 & 0.8100 & 0.8365 & 0.8061 & 0.8365 & 0.2593 & 0.8045 & 0.8345 & 0.8036 & 0.8345 & 0.2537 \\\\ \\hline\n"
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.5080 & 0.2077 & 0.2634 & 0.8255 & 0.2429 & 0.5061 & 0.2086 & 0.2632 & 0.8242 & 0.2400 \\\\ \\hline\n",
+      "10 & 0.5911 & 0.2475 & 0.3186 & 0.8329 & 0.2516 & 0.5678 & 0.2455 & 0.3151 & 0.8313 & 0.2458 \\\\ \\hline\n",
+      "25 & 0.6069 & 0.2688 & 0.3416 & 0.8364 & 0.2581 & 0.5759 & 0.2646 & 0.3352 & 0.8340 & 0.2519 \\\\ \\hline\n",
+      "50 & 0.6067 & 0.2685 & 0.3417 & 0.8365 & 0.2581 & 0.5770 & 0.2653 & 0.3363 & 0.8342 & 0.2525 \\\\ \\hline\n",
+      "75 & 0.6066 & 0.2689 & 0.3421 & 0.8364 & 0.2585 & 0.5773 & 0.2657 & 0.3371 & 0.8343 & 0.2530 \\\\ \\hline\n",
+      "100 & 0.6079 & 0.2689 & 0.3424 & 0.8365 & 0.2592 & 0.5777 & 0.2659 & 0.3374 & 0.8345 & 0.2536 \\\\ \\hline\n"
      ]
     }
    ],
@@ -343,6 +373,47 @@
     "run_experiment(\"./data/DATA_TFIDFV0_HADM_TOP10\")\n",
     "run_experiment(\"./data/DATA_TFIDFV1_HADM_TOP10\")\n",
     "run_experiment(\"./data/DATA_WORD2VEC_HADM_TOP10\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./data/DATA_TFIDFV0_HADM_TOP10\n",
+      "Train, Test: 39544 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.4722 & 0.0172 & 0.0324 & 0.8076 & 0.2329 & 0.3556 & 0.0166 & 0.0310 & 0.8062 & 0.2313 \\\\ \\hline\n",
+      "10 & 0.8717 & 0.1211 & 0.1952 & 0.8311 & 0.2566 & 0.6316 & 0.0842 & 0.1357 & 0.8201 & 0.2440 \\\\ \\hline\n",
+      "20 & 0.9924 & 0.3686 & 0.5038 & 0.8860 & 0.3940 & 0.7632 & 0.1571 & 0.2306 & 0.8316 & 0.2581 \\\\ \\hline\n",
+      "30 & 0.9974 & 0.5644 & 0.6957 & 0.9258 & 0.5583 & 0.7462 & 0.1931 & 0.2725 & 0.8366 & 0.2654 \\\\ \\hline\n",
+      "./data/DATA_TFIDFV1_HADM_TOP10\n",
+      "Train, Test: 39544 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.4706 & 0.0327 & 0.0568 & 0.8112 & 0.2356 & 0.4658 & 0.0321 & 0.0557 & 0.8099 & 0.2350 \\\\ \\hline\n",
+      "10 & 0.9710 & 0.1340 & 0.2075 & 0.8341 & 0.2613 & 0.6449 & 0.0999 & 0.1532 & 0.8236 & 0.2469 \\\\ \\hline\n",
+      "20 & 0.9939 & 0.4277 & 0.5658 & 0.8974 & 0.4252 & 0.7992 & 0.1806 & 0.2578 & 0.8369 & 0.2635 \\\\ \\hline\n",
+      "30 & 0.9984 & 0.6447 & 0.7642 & 0.9404 & 0.6229 & 0.7557 & 0.2234 & 0.3070 & 0.8421 & 0.2701 \\\\ \\hline\n",
+      "./data/DATA_WORD2VEC_HADM_TOP10\n",
+      "Train, Test: 39544 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.3841 & 0.0766 & 0.1107 & 0.8179 & 0.2414 & 0.3883 & 0.0743 & 0.1081 & 0.8163 & 0.2403 \\\\ \\hline\n",
+      "10 & 0.9258 & 0.2149 & 0.2990 & 0.8483 & 0.2905 & 0.5875 & 0.1438 & 0.2013 & 0.8253 & 0.2471 \\\\ \\hline\n",
+      "20 & 0.9993 & 0.9479 & 0.9724 & 0.9916 & 0.9309 & 0.5446 & 0.1923 & 0.2591 & 0.8236 & 0.2374 \\\\ \\hline\n",
+      "30 & 0.9999 & 0.9722 & 0.9858 & 0.9955 & 0.9642 & 0.5765 & 0.1758 & 0.2424 & 0.8233 & 0.2372 \\\\ \\hline\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_experiment2(\"./data/DATA_TFIDFV0_HADM_TOP10\")\n",
+    "run_experiment2(\"./data/DATA_TFIDFV1_HADM_TOP10\")\n",
+    "run_experiment2(\"./data/DATA_WORD2VEC_HADM_TOP10\")"
    ]
   },
   {
