--- a/code/pre-trained_wordvectors_to_keras.ipynb
+++ b/code/pre-trained_wordvectors_to_keras.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I followed this tutorial:\n",
+    "https://blog.keras.io/using-pre-trained-word-embeddings-in-a-keras-model.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
